# albert-plugin-mediaremote

./: CMakeLists.txt  README.md  metadata.json
i18n/: mediaremote_de.ts  mediaremote_en.ts
include/albert/plugin/: mediaremote.h
src/: configwidget.ui  plugin.cpp  plugin.h
src/mediaremote/: mediaremote.h  player.h  player.mm  plugin.mm
src/mpris/: mpris.xml  player.cpp  player.h  plugin.cpp
